--- a/env.example
+++ b/env.example
@@ -1,3 +1,3 @@
 API_URL=https://www.alphavantage.co/query
-API_KEY=941IMPXPTA6C8YYK
+API_KEY='get your api key at https://www.alphavantage.co/support/#api-key and paste here'
 SECRET_KEY='SECRET_KEY'
